# -3DObjectMap_Categorization_Baseline-

./: .gitignore  CMakeLists.txt  COCO_valid_classes.txt  Project1.sln  README.md  YCBV_valid_classes.txt  valid_classes.txt
Project1/: .gitignore  Project1.vcxproj  Project1.vcxproj.filters  Source.cpp  Transform.cpp  Transform.h
include/: CameraModel.h  Transform.h  json.hpp
src/: BaselineEvaluation.cpp  ObjectMap.cpp  SceneComparisons.cpp  Transform.cpp
